--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html ng-app='friendsList' ng-controller='FriendController'>
+<html ng-app='myFriendsList' ng-controller='FriendController'>
   <head>
+    <script src='http://code.jquery.com/jquery-1.10.2.js' type='text/javascript'></script>
 
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
@@ -17,7 +18,7 @@
   </head>
 
   <body>
-
+  {{test}}
 
     <h1>The <strong>facebook</strong> Friend Machine</h1>
 
@@ -47,26 +48,26 @@
       </div>
     </form>
 
+    {{test}}
+
       <ul>
-        <li class='friend'>
-           <img class="profile-pic" src='https://scontent-a.xx.fbcdn.net/hprofile-ash3/833_10200838803828124_1233160321_a.jpg'>
-          <h3>Cali Fornia</h3>
+        <li ng-repeat='friendsName in friends' class='friend'>
+          <img class="profile-pic" src='{{friendsName.pic_square}}'>
+          <h3>{{friendsName.name}}</h3>
           <div class="location">
-            Location: New Port Beach, California, United States
+            Location: {{friendsName.current_location.name}}
           </div>      
           <div class="status">
-            Status: I hate the snow. I wish I was on the beach right now!!! <span class="hashtag">#ihateprovo</span>
+            Status: {{friendsName.status.message}} <!-- <span class="hashtag">#ihateprovo</span> -->
           </div>      
           <div class="num-friends">
-            Friends: 1,367
+            Friends: {{friendsName.friend_count}}
           </div>
         </li>
       </ul>
     </div>
 
 
-
-    <script src='http://code.jquery.com/jquery-1.10.2.js' type='text/javascript'></script>
 
 
     </body>
