--- a/index.html
+++ b/index.html
@@ -28,30 +28,32 @@
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
 
-      <input class="form-control" placeholder="Search Anything About Your Friends" >
+     <!--  <input ng-model='searchTerm' class="form-control" placeholder="Search Anything About Your Friends" > -->
       <!-- The stuff below is For step 5....get rid of the one above if you wish-->
-    <!--    
-        <input class="form-control" placeholder="Search Your Friends' Name" >
-        <input class="form-control" placeholder="Search Your Freinds' Location" > 
-     -->
-        <select class="input-medium">
-            <option>Name</option>
-            <option># friends</option>
-            <option>City</option>
-            <option>State</option>
-            <option>Country</option>
+       
+        <input ng-model='search.name' class="form-control" placeholder="Search Your Friends' Name" >
+        <input ng-model='search.current_location' class="form-control" placeholder="Search Your Friends' Location" > 
+     
+        <select ng-model='sort' class="input-medium">
+            <option value='name'>Name</option>
+            <option value='friend_count'># friends</option>
+            <option value='current_location.city'>City</option>
+            <option value='current_location.state'>State</option>
+            <option value='current_location.country'>Country</option>
         </select>
-        <select class="input-medium">
-            <option value="false">Descending</option>
-            <option value="true">Ascending</option>
+          {{sort}}
+
+        <select ng-model='order' class="input-medium">
+            <option value="true">Descending</option>
+            <option value="false">Ascending</option>
         </select>
       </div>
     </form>
 
     {{test}}
 
-      <ul>
-        <li ng-repeat='friendsName in friends' class='friend'>
+      <ul ng-repeat='friendsName in friends | filter:search | orderBy:sort:order'>
+        <li class='friend'>
           <img class="profile-pic" src='{{friendsName.pic_square}}'>
           <h3>{{friendsName.name}}</h3>
           <div class="location">
